# Team4_Game_Engine

./: CMakeLists.txt  README.md
examples/basic_usage/: CMakeLists.txt  main.cpp  particuleShader.fs  particuleShader.vs  shader.vs
team4_game_engine/: CMakeLists.txt
team4_game_engine/include/team4_game_engine/: common.hpp
team4_game_engine/include/team4_game_engine/components/: boundingVolume.hpp  camera.hpp  children.hpp  color.hpp  components.hpp  model.hpp  name.hpp  parent.hpp  position.hpp  rigidbody.hpp  rotation.hpp  scale.hpp
team4_game_engine/include/team4_game_engine/components/colliders/: box_collider.hpp  collider.hpp  plane_collider.hpp  sphere_collider.hpp
team4_game_engine/include/team4_game_engine/engine/: dear_imgui_overlay.hpp  engine.hpp  entity.hpp  primitive.hpp  scene_view.hpp  world.hpp
team4_game_engine/include/team4_game_engine/engine/mathematics/: matrix3.hpp  matrix4.hpp  octTree.hpp  quaternion.hpp  test_matrix4.hpp  test_quaternion.hpp  vector3d.hpp
team4_game_engine/include/team4_game_engine/engine/physics/: CollisionData.hpp  Contact.hpp  collision.hpp  collision_registry.hpp  collision_resolver.hpp  physics.hpp
team4_game_engine/include/team4_game_engine/engine/physics/forces_generators/: anchored_spring.hpp  basic_spring.hpp  buoyancy.hpp  drag.hpp  elasticity_spring.hpp  force_generator.hpp  force_registery.hpp  gravity.hpp  stiff_spring.hpp
team4_game_engine/include/team4_game_engine/engine/renderer/: buffer_layout.hpp  mesh.hpp  primitive.hpp  renderer3d.hpp  shader.hpp  shape.hpp
team4_game_engine/include/team4_game_engine/serialization/: endianess.hpp  input_memory_stream.hpp  memory_stream.hpp  output_memory_stream.hpp
team4_game_engine/include/team4_game_engine/systems/: collision_system.hpp  entity_viewer.hpp  fps_counter.hpp  physics_system.hpp  system.hpp
team4_game_engine/src/engine/: dear_imgui_overlay.cpp  engine.cpp  entity.cpp  world.cpp
team4_game_engine/src/engine/mathematics/: matrix3.cpp  matrix4.cpp  octTree.cpp  quaternion.cpp  vector3d.cpp
team4_game_engine/src/engine/physics/: CollisionData.cpp  Contact.cpp  collision.cpp  collision_resolver.cpp  physics.cpp
team4_game_engine/src/engine/physics/forces_generators/: anchored_spring.cpp  basic_spring.cpp  buoyancy.cpp  drag.cpp  elasticity_spring.cpp  gravity.cpp  stiff_spring.cpp
team4_game_engine/src/engine/renderer/: mesh.cpp  shader.cpp
team4_game_engine/src/systems/: collision_system.cpp  entity_viewer.cpp  fps_counter.cpp  physics_system.cpp
